--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -1077,6 +1077,9 @@ p {
         font-size: 2rem;
         margin-bottom: 2rem;
       }
+      .item-info-block-logo_title {
+        margin: .1rem 0 0 .75rem;
+      }
       .item-info-block_title {
         margin-right: 1rem;
       }
